Add block locking and hints to gameplay

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,8 @@
       </p>
       <p class="hud__status" id="status"></p>
     </div>
+    <div class="target-indicator" id="target-indicator" aria-live="polite"></div>
+    <div class="action-warning" id="action-warning" aria-live="assertive"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
