Improve persistence, flag warnings, and mobile support

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
         </label>
       </div>
       <p class="hud__hint">
-        Left click to reveal, right click to flag. Drag to pan, scroll to zoom. Press <kbd>R</kbd> to reset the current seed.
+        Left click or tap to reveal. Right click or long-press to flag. Drag to pan, scroll to zoom. Press <kbd>R</kbd> to reset the current seed.
       </p>
       <p class="hud__status" id="status"></p>
     </div>
