Fix long-press flagging and hide touch-only slider on desktop

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
             <span id="density-value">18%</span>
           </label>
         </div>
-        <div class="hud__controls">
+        <div class="hud__controls" data-touch-only>
           <label class="slider">
             Flag hold time
             <input id="flag-hold" type="range" min="150" max="900" step="25" value="450" />
